--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-spring.http.multipart.max-file-size=128KB
-spring.http.multipart.max-request-size=128KB
+spring.http.multipart.max-file-size=1MB
+spring.http.multipart.max-request-size=1MB
 
 
 
